--- a/report/report.tex
+++ b/report/report.tex
@@ -64,7 +64,7 @@ Identifying market segments in regional economies is crucial for effective marke
 
 However, the identification of market segments, and moreover that of business clusters, is complicated by the fact that data on regional companies is often unavailable or difficult to analyze due to non-numerical, irrelevant, or missing features.
 \pe{This seems a harsh claim, in practice one could argue that it is available through regional connections}
-\nm{Keep the current motivation for using company descriptions and then only later mention that we can also add other features?}
+\nm{We keep the current motivation for using company descriptions and then only later mention that we can also add other features}
 
 This work demonstrates how to identify market segments and develop business clusters by introducing an automatic clustering pipeline and location recommendation system for economic data from the German federal state Saarland. The novelty of our approach is that we rely on language models to encode the companies' information. 
 
@@ -181,7 +181,6 @@ To choose the number of clusters for $K$-Means, we started with $K = \sqrt{N}$, 
 Given that we have no ground truth labels, we will evaluate the results of our clustering process based on our investigation of Saarland's economy in \MakeUppercase{\romannumeral 2}.
 
 \section{Results}
-\nm{Rewrite clustering section for the new results, keep location recommendation results as they are?}
 \begin{figure}[H]
     \centering
     \includegraphics[width=0.5\textwidth]{figures/clustering_results.png}
