added matriculation number

--- a/report/report.tex
+++ b/report/report.tex
@@ -45,7 +45,7 @@
 \IEEEauthorblockA{s8tsreck@stud.uni-saarland.de \\ 2577468}
 \and
 \IEEEauthorblockN{5\textsuperscript{th} Nazari Hameed}
-\IEEEauthorblockA{Email Address \\ Matriculation No.}
+\IEEEauthorblockA{abna00001@stud.uni-saarland.de \\ 7004543}
 }
 
 \maketitle
